# compress-tools-rs-7z-unpack-failure

./: .gitignore  Cargo.toml  README.md  create-7z-with-two-files.sh
src/: main.rs
