[package]
name = "rust_7z_unpack_investigation"
version = "0.1.0"
authors = ["Mateusz Szychowski (Muttley) <mateusz@szychowski.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
compress-tools = { git = "https://github.com/OSSystems/compress-tools-rs.git" }
